add sql initial charge